--- a/stylesheetasdf.css
+++ b/stylesheetasdf.css
@@ -54,27 +54,10 @@
 
     position:absolute;
     display:run-in;
+    font-family:sans-serif;
 }
 
-#textTwo {
-    position:absolute;
-    display:run-in;
-}
 
-#textThree {
-    position:absolute;
-    display:run-in;
-}
-
-#textFour {
-    position:absolute;
-    display:run-in;
-}
-
-#textFive {
-    position:absolute;
-    display:run-in;
-}
 
 #worksLink {
     font-size: 1em;
@@ -96,25 +79,25 @@
 }
 
 #bioDiv {    
-    width: 9em;
-    height: 1em;
+   // width: 9em;
+   // height: 1em;
     position:absolute;  
-    background-color: #81F7D8;  
+   // background-color: #81F7D8;  
     display:inline-block;
 }            
 
 #contactDiv {    
-    width: 9em;
-    height: 1em;
+   // width: 9em;
+   // height: 1em;
     position:absolute;  
-    background-color: #81F7D8;  
+   // background-color: #81F7D8;  
     display:inline-block;
 }      
 
 #worksDiv {    
-    width: 9em;
-    height: 1em;
+  //  width: 9em;
+  //  height: 1em;
     position:absolute;  
-    background-color: #81F7D8;  
+   // background-color: #81F7D8;  
     display:inline-block;
 }      
