--- a/stylesheetasdf.css
+++ b/stylesheetasdf.css
@@ -42,6 +42,12 @@
     margin-left:30em;
 }
 
+.youtubeLink {
+    position:absolute;
+    display:block;
+    margin-left:11em;
+}
+
 
 #one {
     width: 5em;
