--- a/stylesheetasdf.css
+++ b/stylesheetasdf.css
@@ -32,12 +32,14 @@
     text-decoration: none;
     font-size: 2em;
     display:run-in;
+    text-align: center;
 }
 
 .menuDiv {
     z-index:2;
     position:absolute;
     display:run-in;
+    text-align: center;
 }
 
 .vertDiv {
