--- a/stylesheetasdf.css
+++ b/stylesheetasdf.css
@@ -186,11 +186,13 @@
 }
 
 #redCanvas {
-    z-index: 2;
+    z-index: 3;
 }
 #greenCanvas {
+    z-index: 2;
+}
+#blueCanvas {
     z-index: 1;
-
 }
 #redactionCanvas3 {
     z-index: 3;
