--- a/stylesheetasdf.css
+++ b/stylesheetasdf.css
@@ -65,53 +65,10 @@
     margin-left:11em;
 }
 
-
-#one {
-    width: 5em;
-    height: 6em;
-    position:absolute;
-    background-color: #81F7D8;  
-    display:run-in;
-                
-}
-
-    
-#two {
-    width: 7em;
-    height: 8em;  
-    position:absolute;
-    margin-left: 12em;
-    margin-top: 5em;
-    background-color: #81F7D8; 
-    display:run-in;
-}
-
-#three {
-    width: 6em;
-    height: 8em;
-    position:absolute;
-    margin-left: 40em;
-    margin-top: -4em;
-    background-color: #81F7D8;  
-    display:run-in;
-}
-
-
-#four {
-    width: 9em;
-    height: 5em;
-    position:absolute;  
-    background-color: #81F7D8;  
-    display:run-in;
-}
-
-
-#five {
-    width: 4em;
-    height: 5em;
-    background-color: #81F7D8;  
+.homeDiv { 
     position:absolute;
     display:run-in;
+
 }
 
 #textOne {
