--- a/stylesheetasdf.css
+++ b/stylesheetasdf.css
@@ -169,3 +169,13 @@
 #redactionCanvas5 {
     z-index: 5;
 }
+
+#indexText {
+    margin-left: 30em;
+    margin-top: 30em;
+    display: run-in;
+    position:absolute;
+    text-decoration: none;
+    font-family:monospace;
+    
+}
