--- a/stylesheetasdf.css
+++ b/stylesheetasdf.css
@@ -16,18 +16,19 @@
 }
 
 .menuLink {
-    font-family: helvetica,verdana,arial,sans-serif;
-    color: white;
+    font-family: monospace;
+    color: black;
     text-decoration: none;
-    font-size: 2em;
+    font-size: 1em;
     display:run-in;
     text-align: center;
 }
 
 .piece {
     position:absolute;
-    display:inline-block;
     margin-left:30em;
+    height:20px;
+    z-index: 1;
 }
 
 .soundCloud {
@@ -36,6 +37,16 @@
     height: 100;
     z-index:3;
     position:relative;
+}
+.workPageLink {
+    font-family : monospace;
+    font-size: 1em;
+    position:absolute;
+    text-decoration: none;
+    color: black;
+    z-index: 3;
+   
+    text-align:center;
 }
 
 .worksParagraph {
@@ -48,7 +59,7 @@
     width: 50%;
     z-index: 2;
     display: run-in;
-    position:inline-block;
+    position:relative;
 }
 
 .vertDiv {
@@ -67,25 +78,22 @@
 
 .homeDiv { 
     position:absolute;
-    display:run-in;
-
 }
 
 #textOne {
-
     position:absolute;
     display:run-in;
     font-family:sans-serif;
 }
 
 
-
 #worksLink {
     font-size: 2em;
+   font-family: monospace;
     color: white;
     text-decoration: none;
-    
 }
+
 #hardParagraphDiv {
     margin-left:11em;
     width:50%;
@@ -179,7 +187,6 @@
 #indexText {
     margin-left: 30em;
     margin-top: 30em;
-    display: run-in;
     position:absolute;
     text-decoration: none;
     font-family:monospace;
@@ -191,3 +198,4 @@
 .clippingPlane {
     visibility: collapse;
 }
+
