--- a/rnn_demo.css
+++ b/rnn_demo.css
@@ -52,7 +52,11 @@ hr {
 }
 
 /*==========================IDs==========================*/
-
+#svg{
+    width    : 100%;
+    height   : 60%;
+    /*max-width: 500px;*/
+}
 
 #rnn_image_div{
     display: inline;
