--- a/rnn/rnn_demo.css
+++ b/rnn/rnn_demo.css
@@ -23,6 +23,37 @@ pre {
   font-size : 12;
 }
 /*==========================classes==========================*/
+/* Tooltip container */
+.tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+    visibility    : hidden;
+    width         : 240px;
+    font-family   : "Century Gothic", CenturyGothic, "Apple Gothic", AppleGothic, "URW Gothic L", "Avant Garde", sans-serif;
+    font-size     : 16;
+
+    color         : #fff;
+    text-align    : center;
+    padding       : 10px 0;
+    border-radius : 0px;
+    /* top           : -30px; */
+    left          : 120%;
+
+    /* Position the tooltip text - see examples below! */
+    position      : absolute;
+    z-index       : 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+}
+
+
 .containing_div{
     overflow     : auto;
     /* font-family  : Futura, Futura-Medium, "Futura Medium", "Century Gothic", CenturyGothic, "Apple Gothic", AppleGothic, "URW Gothic L", "Avant Garde", sans-serif; */
